<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="activity_lista_de_pacotes_titulo_pacotes_especiais_1">Especiais</string>
    <string name="activity_lista_de_pacotes_subtitulo_pacotes_especiais_1">Brasil</string>
    <string name="activity_lista_de_pacotes_banner_do_titulo_de_pacotes_especiais">Banner na cor purple</string>
    <string name="item_pacote_viagens_imagem_description">imagem do pacote de viagens</string>
    <string name="activity_resumo_preco_preco_final">Preço final:</string>
    <string name="activity_resumo_pacote_content_description">banner inicial mostrando a imagem do local escolhido no resumo do pacote</string>
    <string name="activity_resumo_pacote_botao_pagamento_1">REALIZAR PAGAMENTO</string>
    <string name="activity_pagamento_cabecalho_1">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="activity_pagamento_str_valor_da_compra_1">Valor da compra:</string>
    <string name="activity_pagamento_numero_do_cartao_1">Número do cartão</string>
    <string name="activity_pagamento_data_de_vencimento_mes_1">MM</string>
    <string name="activity_pagamento_data_de_vencimento_ano_1">AA</string>
    <string name="activity_pagamento_cvc_1">CVC</string>
    <string name="activity_pagamento_nome_no_cartao_1">Nome no cartão</string>
    <string name="activity_pagamento_botao_finalizar_1">FINALIZAR COMPRA</string>
    <string name="activity_resumo_compra_str_parabens_1">Parabéns!</string>
    <string name="activity_resumo_compra_str_sucesso_1">Compra realizada com sucesso :)</string>
    <string name="activity_resumo_compra_str_resumo_compra_1">Confira o resumo da compra:</string>
    <string name="activity_resumo_compra_banner_1_contentDescription">Banner app de sucesso pela compra</string>
    <string name="activity_resumo_compra_imagem_pacote_1_contentDescription">Imagem do local do pacote comprado</string>
    <string name="activity_splash_screen_subtitulo">Viagens</string>
    <string name="activity_splash_screen_background_contentDescription">Banner do splash screen</string>
    <string name="activity_splash_screen_logo_contentDescription">Logo da splash screen</string>
</resources>