<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SplashScreenActivity"
    >

    <ImageView
        android:id="@+id/activity_splash_screen_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/activity_splash_screen_background_contentDescription"
        android:src="@drawable/background_splash_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/activity_splash_screen_logo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/activity_splash_screen_logo_contentDescription"
        android:src="@drawable/customerlogo_alura"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/activity_splash_screen_subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/activity_splash_screen_logo"
        app:layout_constraintEnd_toEndOf="@+id/activity_splash_screen_logo"
        app:layout_constraintTop_toBottomOf="@+id/activity_splash_screen_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/activity_splash_screen_subtitulo"
        android:layout_margin="20dp"
        app:layout_constraintVertical_bias="0.0"
        android:textSize="30sp"
        android:textColor="@color/white"
        />







</androidx.constraintlayout.widget.ConstraintLayout>