<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PagamentoActivity">

    <TextView
        android:id="@+id/activity_pagamento_cabecalho_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/activity_pagamento_cabecalho_1"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/activity_pagamento_str_valor_da_compra_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/activity_pagamento_str_valor_da_compra_1"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_pagamento_preco_pacote_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_cabecalho_1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/activity_pagamento_preco_pacote_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_pagamento_numero_do_cartao_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/activity_pagamento_str_valor_da_compra_1"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_str_valor_da_compra_1"
        tools:text="@sample/pacotes.json/pacotes/preco" />

    <EditText
        android:id="@+id/activity_pagamento_numero_do_cartao_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/activity_pagamento_numero_do_cartao_1"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="12"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/activity_pagamento_data_de_vencimento_mes_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/activity_pagamento_preco_pacote_1"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_preco_pacote_1" />

    <EditText
        android:id="@+id/activity_pagamento_data_de_vencimento_mes_1"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:hint="@string/activity_pagamento_data_de_vencimento_mes_1"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/activity_pagamento_nome_no_cartao_1"
        app:layout_constraintStart_toStartOf="@+id/activity_pagamento_numero_do_cartao_1"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_numero_do_cartao_1" />

    <EditText
        android:id="@id/activity_pagamento_data_de_vencimento_ano_1"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/activity_pagamento_data_de_vencimento_ano_1"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/activity_pagamento_cvc_1"
        app:layout_constraintStart_toEndOf="@+id/activity_pagamento_data_de_vencimento_mes_1"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_numero_do_cartao_1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/activity_pagamento_cvc_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/activity_pagamento_cvc_1"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        android:textAlignment="textEnd"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/activity_pagamento_nome_no_cartao_1"
        app:layout_constraintEnd_toEndOf="@id/activity_pagamento_numero_do_cartao_1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/activity_pagamento_data_de_vencimento_ano_1"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_numero_do_cartao_1"
        app:layout_constraintVertical_bias="0.0"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"/>

    <EditText
        android:id="@+id/activity_pagamento_nome_no_cartao_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/activity_pagamento_nome_no_cartao_1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@id/activity_pagamento_data_de_vencimento_mes_1"
        app:layout_constraintEnd_toEndOf="@id/activity_pagamento_cvc_1"
        app:layout_constraintStart_toStartOf="@id/activity_pagamento_data_de_vencimento_mes_1"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_data_de_vencimento_mes_1"
        app:layout_constraintVertical_bias="0.0"
        android:digits="abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ "/>

    <Button
        android:id="@+id/activity_pagamento_botao_finalizar_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_botoes"
        android:text="@string/activity_pagamento_botao_finalizar_1"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/activity_pagamento_nome_no_cartao_1"
        app:layout_constraintStart_toStartOf="@id/activity_pagamento_nome_no_cartao_1"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_nome_no_cartao_1"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>