<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/activity_lista_de_pacotes_banner_do_titulo_de_pacotes_especiais_1"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@color/cP"
        android:contentDescription="@string/activity_lista_de_pacotes_banner_do_titulo_de_pacotes_especiais" />

    <TextView
        android:id="@+id/activity_lista_de_pacotes_titulo_pacotes_especiais_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="@id/activity_lista_de_pacotes_banner_do_titulo_de_pacotes_especiais_1"
        app:layout_constraintTop_toTopOf="@id/activity_lista_de_pacotes_banner_do_titulo_de_pacotes_especiais_1"
        android:text="@string/activity_lista_de_pacotes_titulo_pacotes_especiais_1"
        android:textSize="24sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/activity_lista_de_pacotes_subtitulo_pacotes_especiais_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/activity_lista_de_pacotes_subtitulo_pacotes_especiais_1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/activity_lista_de_pacotes_titulo_pacotes_especiais_1"
        app:layout_constraintTop_toBottomOf="@+id/activity_lista_de_pacotes_titulo_pacotes_especiais_1"
        android:textColor="@color/white"
        />

    <ListView
        android:id="@+id/activity_lista_de_pacotes_lista_de_pacotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_lista_de_pacotes_banner_do_titulo_de_pacotes_especiais_1"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_pacote_viagens"
        android:divider="@null"
        android:dividerHeight="0dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>